--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -15,6 +15,12 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
+
+  <div class="ingredient">
+    <%= f.label :ingredient %><br />
+    <%= select("ingredient", "ingredient_id", Ingredient.all.collect {|i| [ i.name, i.id ] })%>
+  </div>
+
   <div class="field">
     <%= f.label :notes %><br />
     <%= f.text_area :notes %>
